@@ -1,216 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2022/01/14 17:52:04 wiz Exp $
-${PYSITELIB}/${EGG_INFODIR}
-${PYSITELIB}/pyx/__init__.py
-${PYSITELIB}/pyx/__init__.pyc
-${PYSITELIB}/pyx/__init__.pyo
-${PYSITELIB}/pyx/attr.py
-${PYSITELIB}/pyx/attr.pyc
-${PYSITELIB}/pyx/attr.pyo
-${PYSITELIB}/pyx/bbox.py
-${PYSITELIB}/pyx/bbox.pyc
-${PYSITELIB}/pyx/bbox.pyo
-${PYSITELIB}/pyx/bitmap.py
-${PYSITELIB}/pyx/bitmap.pyc
-${PYSITELIB}/pyx/bitmap.pyo
-${PYSITELIB}/pyx/box.py
-${PYSITELIB}/pyx/box.pyc
-${PYSITELIB}/pyx/box.pyo
-${PYSITELIB}/pyx/canvas.py
-${PYSITELIB}/pyx/canvas.pyc
-${PYSITELIB}/pyx/canvas.pyo
-${PYSITELIB}/pyx/canvasitem.py
-${PYSITELIB}/pyx/canvasitem.pyc
-${PYSITELIB}/pyx/canvasitem.pyo
-${PYSITELIB}/pyx/color.py
-${PYSITELIB}/pyx/color.pyc
-${PYSITELIB}/pyx/color.pyo
-${PYSITELIB}/pyx/config.py
-${PYSITELIB}/pyx/config.pyc
-${PYSITELIB}/pyx/config.pyo
-${PYSITELIB}/pyx/connector.py
-${PYSITELIB}/pyx/connector.pyc
-${PYSITELIB}/pyx/connector.pyo
-${PYSITELIB}/pyx/data/afm/Courier-Bold.afm
-${PYSITELIB}/pyx/data/afm/Courier-BoldOblique.afm
-${PYSITELIB}/pyx/data/afm/Courier-Oblique.afm
-${PYSITELIB}/pyx/data/afm/Courier.afm
-${PYSITELIB}/pyx/data/afm/Helvetica-Bold.afm
-${PYSITELIB}/pyx/data/afm/Helvetica-BoldOblique.afm
-${PYSITELIB}/pyx/data/afm/Helvetica-Oblique.afm
-${PYSITELIB}/pyx/data/afm/Helvetica.afm
-${PYSITELIB}/pyx/data/afm/MustRead.html
-${PYSITELIB}/pyx/data/afm/Symbol.afm
-${PYSITELIB}/pyx/data/afm/Times-Bold.afm
-${PYSITELIB}/pyx/data/afm/Times-BoldItalic.afm
-${PYSITELIB}/pyx/data/afm/Times-Italic.afm
-${PYSITELIB}/pyx/data/afm/Times-Roman.afm
-${PYSITELIB}/pyx/data/afm/ZapfDingbats.afm
-${PYSITELIB}/pyx/data/def/pyx.def
-${PYSITELIB}/pyx/data/lfs/10pt.lfs
-${PYSITELIB}/pyx/data/lfs/10ptex.lfs
-${PYSITELIB}/pyx/data/lfs/11pt.lfs
-${PYSITELIB}/pyx/data/lfs/11ptex.lfs
-${PYSITELIB}/pyx/data/lfs/12pt.lfs
-${PYSITELIB}/pyx/data/lfs/12ptex.lfs
-${PYSITELIB}/pyx/data/lfs/createlfs.py
-${PYSITELIB}/pyx/data/lfs/createlfs.pyc
-${PYSITELIB}/pyx/data/lfs/createlfs.pyo
-${PYSITELIB}/pyx/data/lfs/createlfs.tex
-${PYSITELIB}/pyx/data/lfs/foils17pt.lfs
-${PYSITELIB}/pyx/data/lfs/foils20pt.lfs
-${PYSITELIB}/pyx/data/lfs/foils25pt.lfs
-${PYSITELIB}/pyx/data/lfs/foils30pt.lfs
-${PYSITELIB}/pyx/data/pyxrc
-${PYSITELIB}/pyx/deco.py
-${PYSITELIB}/pyx/deco.pyc
-${PYSITELIB}/pyx/deco.pyo
-${PYSITELIB}/pyx/deformer.py
-${PYSITELIB}/pyx/deformer.pyc
-${PYSITELIB}/pyx/deformer.pyo
-${PYSITELIB}/pyx/document.py
-${PYSITELIB}/pyx/document.pyc
-${PYSITELIB}/pyx/document.pyo
-${PYSITELIB}/pyx/dvi/__init__.py
-${PYSITELIB}/pyx/dvi/__init__.pyc
-${PYSITELIB}/pyx/dvi/__init__.pyo
-${PYSITELIB}/pyx/dvi/dvifile.py
-${PYSITELIB}/pyx/dvi/dvifile.pyc
-${PYSITELIB}/pyx/dvi/dvifile.pyo
-${PYSITELIB}/pyx/dvi/encfile.py
-${PYSITELIB}/pyx/dvi/encfile.pyc
-${PYSITELIB}/pyx/dvi/encfile.pyo
-${PYSITELIB}/pyx/dvi/mapfile.py
-${PYSITELIB}/pyx/dvi/mapfile.pyc
-${PYSITELIB}/pyx/dvi/mapfile.pyo
-${PYSITELIB}/pyx/dvi/texfont.py
-${PYSITELIB}/pyx/dvi/texfont.pyc
-${PYSITELIB}/pyx/dvi/texfont.pyo
-${PYSITELIB}/pyx/dvi/tfmfile.py
-${PYSITELIB}/pyx/dvi/tfmfile.pyc
-${PYSITELIB}/pyx/dvi/tfmfile.pyo
-${PYSITELIB}/pyx/dvi/vffile.py
-${PYSITELIB}/pyx/dvi/vffile.pyc
-${PYSITELIB}/pyx/dvi/vffile.pyo
-${PYSITELIB}/pyx/epsfile.py
-${PYSITELIB}/pyx/epsfile.pyc
-${PYSITELIB}/pyx/epsfile.pyo
-${PYSITELIB}/pyx/filelocator.py
-${PYSITELIB}/pyx/filelocator.pyc
-${PYSITELIB}/pyx/filelocator.pyo
-${PYSITELIB}/pyx/font/__init__.py
-${PYSITELIB}/pyx/font/__init__.pyc
-${PYSITELIB}/pyx/font/__init__.pyo
-${PYSITELIB}/pyx/font/afmfile.py
-${PYSITELIB}/pyx/font/afmfile.pyc
-${PYSITELIB}/pyx/font/afmfile.pyo
-${PYSITELIB}/pyx/font/font.py
-${PYSITELIB}/pyx/font/font.pyc
-${PYSITELIB}/pyx/font/font.pyo
-${PYSITELIB}/pyx/font/metric.py
-${PYSITELIB}/pyx/font/metric.pyc
-${PYSITELIB}/pyx/font/metric.pyo
-${PYSITELIB}/pyx/font/pfmfile.py
-${PYSITELIB}/pyx/font/pfmfile.pyc
-${PYSITELIB}/pyx/font/pfmfile.pyo
-${PYSITELIB}/pyx/font/t1code.py
-${PYSITELIB}/pyx/font/t1code.pyc
-${PYSITELIB}/pyx/font/t1code.pyo
-${PYSITELIB}/pyx/font/t1file.py
-${PYSITELIB}/pyx/font/t1file.pyc
-${PYSITELIB}/pyx/font/t1file.pyo
-${PYSITELIB}/pyx/graph/__init__.py
-${PYSITELIB}/pyx/graph/__init__.pyc
-${PYSITELIB}/pyx/graph/__init__.pyo
-${PYSITELIB}/pyx/graph/axis/__init__.py
-${PYSITELIB}/pyx/graph/axis/__init__.pyc
-${PYSITELIB}/pyx/graph/axis/__init__.pyo
-${PYSITELIB}/pyx/graph/axis/axis.py
-${PYSITELIB}/pyx/graph/axis/axis.pyc
-${PYSITELIB}/pyx/graph/axis/axis.pyo
-${PYSITELIB}/pyx/graph/axis/painter.py
-${PYSITELIB}/pyx/graph/axis/painter.pyc
-${PYSITELIB}/pyx/graph/axis/painter.pyo
-${PYSITELIB}/pyx/graph/axis/parter.py
-${PYSITELIB}/pyx/graph/axis/parter.pyc
-${PYSITELIB}/pyx/graph/axis/parter.pyo
-${PYSITELIB}/pyx/graph/axis/positioner.py
-${PYSITELIB}/pyx/graph/axis/positioner.pyc
-${PYSITELIB}/pyx/graph/axis/positioner.pyo
-${PYSITELIB}/pyx/graph/axis/rater.py
-${PYSITELIB}/pyx/graph/axis/rater.pyc
-${PYSITELIB}/pyx/graph/axis/rater.pyo
-${PYSITELIB}/pyx/graph/axis/texter.py
-${PYSITELIB}/pyx/graph/axis/texter.pyc
-${PYSITELIB}/pyx/graph/axis/texter.pyo
-${PYSITELIB}/pyx/graph/axis/tick.py
-${PYSITELIB}/pyx/graph/axis/tick.pyc
-${PYSITELIB}/pyx/graph/axis/tick.pyo
-${PYSITELIB}/pyx/graph/axis/timeaxis.py
-${PYSITELIB}/pyx/graph/axis/timeaxis.pyc
-${PYSITELIB}/pyx/graph/axis/timeaxis.pyo
-${PYSITELIB}/pyx/graph/data.py
-${PYSITELIB}/pyx/graph/data.pyc
-${PYSITELIB}/pyx/graph/data.pyo
-${PYSITELIB}/pyx/graph/graph.py
-${PYSITELIB}/pyx/graph/graph.pyc
-${PYSITELIB}/pyx/graph/graph.pyo
-${PYSITELIB}/pyx/graph/key.py
-${PYSITELIB}/pyx/graph/key.pyc
-${PYSITELIB}/pyx/graph/key.pyo
-${PYSITELIB}/pyx/graph/style.py
-${PYSITELIB}/pyx/graph/style.pyc
-${PYSITELIB}/pyx/graph/style.pyo
-${PYSITELIB}/pyx/mathutils.py
-${PYSITELIB}/pyx/mathutils.pyc
-${PYSITELIB}/pyx/mathutils.pyo
-${PYSITELIB}/pyx/mesh.py
-${PYSITELIB}/pyx/mesh.pyc
-${PYSITELIB}/pyx/mesh.pyo
-${PYSITELIB}/pyx/metapost/__init__.py
-${PYSITELIB}/pyx/metapost/__init__.pyc
-${PYSITELIB}/pyx/metapost/__init__.pyo
-${PYSITELIB}/pyx/metapost/mp_path.py
-${PYSITELIB}/pyx/metapost/mp_path.pyc
-${PYSITELIB}/pyx/metapost/mp_path.pyo
-${PYSITELIB}/pyx/metapost/path.py
-${PYSITELIB}/pyx/metapost/path.pyc
-${PYSITELIB}/pyx/metapost/path.pyo
-${PYSITELIB}/pyx/normpath.py
-${PYSITELIB}/pyx/normpath.pyc
-${PYSITELIB}/pyx/normpath.pyo
-${PYSITELIB}/pyx/path.py
-${PYSITELIB}/pyx/path.pyc
-${PYSITELIB}/pyx/path.pyo
-${PYSITELIB}/pyx/pattern.py
-${PYSITELIB}/pyx/pattern.pyc
-${PYSITELIB}/pyx/pattern.pyo
-${PYSITELIB}/pyx/pdfextra.py
-${PYSITELIB}/pyx/pdfextra.pyc
-${PYSITELIB}/pyx/pdfextra.pyo
-${PYSITELIB}/pyx/pdfwriter.py
-${PYSITELIB}/pyx/pdfwriter.pyc
-${PYSITELIB}/pyx/pdfwriter.pyo
-${PYSITELIB}/pyx/pswriter.py
-${PYSITELIB}/pyx/pswriter.pyc
-${PYSITELIB}/pyx/pswriter.pyo
-${PYSITELIB}/pyx/pycompat.py
-${PYSITELIB}/pyx/pycompat.pyc
-${PYSITELIB}/pyx/pycompat.pyo
-${PYSITELIB}/pyx/reader.py
-${PYSITELIB}/pyx/reader.pyc
-${PYSITELIB}/pyx/reader.pyo
-${PYSITELIB}/pyx/style.py
-${PYSITELIB}/pyx/style.pyc
-${PYSITELIB}/pyx/style.pyo
-${PYSITELIB}/pyx/text.py
-${PYSITELIB}/pyx/text.pyc
-${PYSITELIB}/pyx/text.pyo
-${PYSITELIB}/pyx/trafo.py
-${PYSITELIB}/pyx/trafo.pyc
-${PYSITELIB}/pyx/trafo.pyo
-${PYSITELIB}/pyx/unit.py
-${PYSITELIB}/pyx/unit.pyc
-${PYSITELIB}/pyx/unit.pyo
-${PYSITELIB}/pyx/version.py
-${PYSITELIB}/pyx/version.pyc
-${PYSITELIB}/pyx/version.pyo
