@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:22:59 nia Exp $
-
-BLAKE2s (PyX-0.12.1.tar.gz) = 8ac0420555825240639a3252e2d010aa9aed88986b6455ff6c47e5e0284f409f
-SHA512 (PyX-0.12.1.tar.gz) = 4941f5aa21aff3743546495fb073c10d2657ff42b2aff401903498638093d0e31e344cce778980f28a7170c6d29eab72ac074277b9d4088376e8692dc71e55c1
-Size (PyX-0.12.1.tar.gz) = 561989 bytes
