@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2915 2024/04/30 10:38:27 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2916 2024/04/30 10:39:31 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4750,3 +4750,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated security/py-keyrings.alt to 5.0.1 [adam 2024-04-30]
 	Updated textproc/py-tinycss2 to 1.3.0 [adam 2024-04-30]
 	Updated net/scapy to 2.5.0nb3 [wiz 2024-04-30]
+	Removed textproc/py-X2 [wiz 2024-04-30]
